fix linebreaks in blog posts

--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -285,6 +285,7 @@ a {
 
 .blogpost-content {
 	margin-top: 1em;
+	white-space: pre-wrap;
 }
 
 hr {
